--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./.github/cocos
+      - uses:  ./.github/actions/cocos-creator-github-action
         id: setup-cocos
         with:
           cocos-version: "2.4.3"
