--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,7 @@ jobs:
   cocos-action:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses:  ./.github/actions/cocos-creator-github-action
+      - uses:  ./.github/cocos
         id: setup-cocos
         with:
           cocos-version: "2.4.3"
